--- a/cv/2/index.html
+++ b/cv/2/index.html
@@ -1,171 +1,190 @@
-<!DOCTYPE html>
-<html lang="id">
+<!DOCTYPE html><html lang="id">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>CV Ade Oftomiando</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
   <style>
+    :root{ --accent:#2563eb }
     body {
-      font-family: 'Segoe UI', Tahoma, sans-serif;
-      margin: 0; padding: 0;
-      background: #f8f9fa; color: #333;
+      font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
       line-height: 1.6;
+      margin: 0;
+      background: #f9fafb;
+      color: #111827;
     }
-    header.control-bar {
-      position: fixed; top: 0; left: 0; right: 0;
-      background: #fff; border-bottom: 1px solid #ddd;
-      padding: 8px 16px; display: flex; gap: 12px;
-      align-items: center; z-index: 1000;
+    .toolbar {
+      display: flex;
+      justify-content: flex-end;
+      gap: 1rem;
+      background: #f3f4f6;
+      padding: 0.5rem 1rem;
+      border-bottom: 1px solid #e5e7eb;
+      position: sticky;
+      top: 0;
+      z-index: 100;
     }
-    header.control-bar button, header.control-bar select {
-      border: 1px solid #ccc; background: #fff;
-      padding: 6px 12px; border-radius: 6px;
-      cursor: pointer; font-size: 14px;
+    .toolbar button, .toolbar input[type=color] {
+      border: none;
+      background: none;
+      cursor: pointer;
+      font-size: 1rem;
     }
-    header.control-bar button:hover,
-    header.control-bar select:hover { background: #f0f0f0; }
-    @media print {
-      header.control-bar { display: none; }
-      body { background: #fff; }
+    header {
+      background: var(--accent);
+      color: white;
+      padding: 1.6rem 1rem;
+      text-align: center;
     }
-    main {
-      max-width: 900px; margin: 100px auto 50px auto;
-      background: #fff; padding: 40px;
-      border-radius: 12px; box-shadow: 0 2px 8px rgba(0,0,0,0.1);
-    }
-    h1 { font-size: 28px; margin-bottom: 0; color: var(--primary, #1e88e5); }
-    h2 { font-size: 20px; margin-top: 28px; color: var(--primary, #1e88e5); border-bottom: 1px solid #eee; padding-bottom: 4px; }
-    .contact { margin-top: 8px; font-size: 14px; color: #555; }
-    .contact a { color: #555; text-decoration: none; margin-right: 14px; }
-    .section { margin-top: 20px; }
-    ul { padding-left: 20px; margin: 0; }
-    li { margin-bottom: 8px; }
+    header h1 { margin: 0; font-size: 1.6rem; }
+    header p { margin: 0.25rem 0; font-size: 0.95rem; }
+    .container { max-width: 800px; margin: 1.25rem auto; padding: 1.5rem; background: white; }
+    section { margin-bottom: 1.25rem; }
+    h2 { color: var(--accent); border-bottom: 2px solid var(--accent); display: inline-block; margin-bottom: .75rem; font-size: 1.05rem; }
+    ul { padding-left: 1.1rem; }
+    strong { color: #0f172a; }
+    p { margin: .4rem 0; }
+    @media print { .toolbar { display: none } body { background: white } .container { box-shadow: none; padding: 0 } }
   </style>
 </head>
-<body>
-  <!-- Control Bar -->
-  <header class="control-bar">
-    <button onclick="toggleLanguage()">🌐 Bahasa: <span id="langLabel">ID</span></button>
-    <select id="themeSelect" onchange="setTheme(this.value)">
-      <option value="blue">Biru</option>
-      <option value="green">Hijau</option>
-      <option value="purple">Ungu</option>
-      <option value="amber">Amber</option>
-      <option value="slate">Slate</option>
-    </select>
-    <button onclick="window.print()"><i class="fa fa-print"></i> Cetak</button>
-  </header>
+<body>  <div class="toolbar" aria-hidden="true">
+    <button id="langToggle" title="Toggle language"><i class="fa-solid fa-globe"></i></button>
+    <input type="color" id="colorPicker" value="#2563eb" aria-label="Pilih warna tema">
+    <button onclick="window.print()" title="Cetak"><i class="fa-solid fa-print"></i></button>
+  </div>  <header>
+    <h1 id="name">Ade Oftomiando</h1>
+    <p id="location">Wonosobo, Indonesia | 10 Mei 1999</p>
+    <p><i class="fa-brands fa-whatsapp"></i>&nbsp;085726951002 &nbsp;|&nbsp; <i class="fa-solid fa-envelope"></i>&nbsp;ademiandoo@gmail.com &nbsp;|&nbsp; <i class="fa-brands fa-github"></i>&nbsp;ademiando</p>
+  </header>  <main class="container" id="cv"><!-- Ringkasan -->
+<section>
+  <h2 data-lang="id">Ringkasan Diri</h2>
+  <h2 data-lang="en" style="display:none">Summary</h2>
 
-  <!-- CV Content -->
-  <main id="cv">
-    <section class="intro">
-      <h1 id="name">Ade Oftomiando</h1>
-      <div class="contact">
-        <i class="fa fa-location-dot"></i> Wonosobo, Indonesia | 10 Mei 1999<br>
-        <a href="mailto:ademiandoo@gmail.com"><i class="fa fa-envelope"></i> ademiandoo@gmail.com</a>
-        <a href="tel:+6285726951002"><i class="fa fa-phone"></i> 085726951002</a>
-        <a href="https://wa.me/6285726951002"><i class="fa fa-brands fa-whatsapp"></i> WhatsApp</a>
-        <a href="https://github.com/ademiando"><i class="fa fa-brands fa-github"></i> GitHub</a>
+  <p data-lang="id">
+    Saya adalah individu proaktif dan autodidak yang telah aktif dalam investasi kripto dan saham sejak 2020. Saya tertarik pada teknologi dan inovasi digital — khususnya bagaimana pengembangan perangkat lunak dan integrasi data dapat meningkatkan kualitas keputusan investasi. Saat ini saya mengembangkan kemampuan teknis (HTML, CSS, JavaScript) untuk merancang alat analisis, automasi, dan visualisasi portofolio yang mendukung perjalanan investasi saya secara sistematis dan terukur.
+  </p>
+
+  <p data-lang="en" style="display:none">
+    I am a proactive, self-taught professional active in cryptocurrency and equity investments since 2020. I have a strong interest in technology and digital innovation—particularly how software development and data integration can elevate investment decision-making. I am currently enhancing technical skills (HTML, CSS, JavaScript) to design analysis tools, automation, and portfolio visualizations that systematically support my investment journey.
+  </p>
+</section>
+
+<!-- Pengalaman -->
+<section>
+  <h2 data-lang="id">Pengalaman</h2>
+  <h2 data-lang="en" style="display:none">Experience</h2>
+
+  <ul>
+    <!-- Instruktur detail -->
+    <li>
+      <div data-lang="id">
+        <strong>Instruktur & Analis Komunitas Kripto</strong> (2020 – 2022)<br>
+        Saya aktif sebagai pemain dan pembimbing di ekosistem Axie Infinity: memimpin sesi pelatihan strategi permainan-berbasis-kripto, menjelaskan mekanika ekonomi token/NFT kepada anggota, serta membangun materi onboarding untuk pemain baru. Peran ini juga melibatkan analisis on-chain dasar, pengelolaan guild kecil, serta pengembangan praktik pengelolaan risiko yang diterapkan pada portofolio komunitas.
       </div>
-    </section>
+      <div data-lang="en" style="display:none">
+        <strong>Crypto Community Instructor & Analyst</strong> (2020 – 2022)<br>
+        I was an active player and mentor within the Axie Infinity ecosystem: leading training sessions on game-integrated crypto strategy, explaining token/NFT economic mechanics to members, and developing onboarding materials for newcomers. The role also included basic on-chain analysis, running a small guild, and implementing risk-management practices applied to community portfolios.
+      </div>
+    </li>
 
-    <section class="section">
-      <h2 id="summaryTitle">Ringkasan Diri</h2>
-      <p id="summaryText">
-        Individu proaktif dan autodidak dengan pengalaman investasi kripto dan saham sejak 2020. 
-        Terbiasa membaca tren pasar, mengelola risiko, dan memanfaatkan peluang. 
-        Saat ini mendalami pemrograman (HTML, CSS, JavaScript) untuk membangun aplikasi analisis data, 
-        automasi, dan visualisasi portofolio—menggabungkan analisis finansial dengan teknologi.
-      </p>
-    </section>
+    <li>
+      <div data-lang="id">
+        <strong>Pengusaha — Salad Buah</strong> (2022 – 2023)<br>
+        Mengelola operasional usaha mikro secara menyeluruh — produksi, pengendalian mutu, pemasaran digital sederhana, dan layanan pelanggan. Pengalaman ini mengasah kemampuan manajemen operasional dan strategi penjualan praktis.
+      </div>
+      <div data-lang="en" style="display:none">
+        <strong>Entrepreneur — Fruit Salad</strong> (2022 – 2023)<br>
+        Managed end-to-end micro-business operations—production, quality control, basic digital marketing, and customer service. This experience refined operational management and practical sales strategy skills.
+      </div>
+    </li>
 
-    <section class="section">
-      <h2 id="experienceTitle">Pengalaman</h2>
-      <ul id="experienceList">
-        <li>
-          <b>Barista</b> (2023 – Sekarang)<br>
-          Menyajikan kopi dengan standar tinggi dan menghadirkan pengalaman pelanggan yang hangat melalui layanan efisien.
-        </li>
-        <li>
-          <b>Instruktur & Analis Komunitas Kripto</b> (2020 – Sekarang)<br>
-          Membimbing anggota baru dengan strategi investasi, menjelaskan konsep fundamental, dan menganalisis tren pasar.
-        </li>
-        <li>
-          <b>Pengusaha Salad Buah</b> (2022 – 2023)<br>
-          Mengelola operasional bisnis kecil dari produksi hingga pemasaran, membangun loyalitas pelanggan.
-        </li>
-      </ul>
-    </section>
+    <li>
+      <div data-lang="id">
+        <strong>Barista</strong> (2023 – Sekarang)<br>
+        Menyajikan produk kopi berkualitas sambil membangun pengalaman pelanggan yang konsisten dan profesional; keterampilan komunikasi layanan diasah dalam lingkungan operasional yang cepat.
+      </div>
+      <div data-lang="en" style="display:none">
+        <strong>Barista</strong> (2023 – Present)<br>
+        Delivering quality coffee products while cultivating a consistent and professional customer experience; service communication skills honed in a fast-paced operational environment.
+      </div>
+    </li>
+  </ul>
+</section>
 
-    <section class="section">
-      <h2 id="projectsTitle">Proyek</h2>
-      <ul id="projectsList">
-        <li><b>Aplikasi Pelacak Harga Kripto (Web)</b> — Web app untuk menampilkan harga kripto real-time dari API publik.</li>
-        <li><b>Agregator Berita Investasi</b> — Platform pengumpul berita ekonomi & kripto terpercaya untuk analisis fundamental.</li>
-      </ul>
-    </section>
+<!-- Proyek utama -->
+<section>
+  <h2 data-lang="id">Proyek Utama</h2>
+  <h2 data-lang="en" style="display:none">Main Project</h2>
 
-    <section class="section">
-      <h2 id="skillsTitle">Keterampilan</h2>
-      <p id="skillsText">
-        Analisis Pasar, Manajemen Portofolio, Komunikasi Komunitas, HTML, CSS, JavaScript, Git, Vercel, 
-        Manajemen Waktu, Kerja Tim, Layanan Pelanggan, Berpikir Analitis.
-      </p>
-    </section>
+  <p data-lang="id">
+    <strong>BloomBoard — Platform Pelacak Portofolio & Lab Trading</strong><br>
+    BloomBoard adalah platform pelacak portofolio bergaya Bloomberg yang saya rancang untuk memungkinkan pengguna menyimpan dan mengelola data investasi secara mandiri melalui Supabase. Fitur utama meliputi: kustomisasi portofolio, modul "Lab" untuk backtesting dan eksperimen strategi dengan data historis, eksekusi order otomatis via script/robot, koneksi langsung ke wallet atau broker untuk trading nyata, serta agregator berita cerdas yang menandai informasi relevan berdasarkan komposisi portofolio pengguna. Sistem ini dirancang agar fleksibel — pengguna dapat menyesuaikan indikator, alert, dan tampilan sesuai kebutuhan investasi mereka.
+  </p>
 
-    <section class="section">
-      <h2 id="interestsTitle">Minat & Hobi</h2>
-      <p id="interestsText">
-        Mendaki gunung, riset ekonomi makro, filsafat, politik, dan investasi jangka panjang.
-      </p>
-    </section>
-  </main>
+  <p data-lang="en" style="display:none">
+    <strong>BloomBoard — Portfolio Tracker & Trading Lab</strong><br>
+    BloomBoard is a Bloomberg-style portfolio tracker I designed to let users independently store and manage investment data via Supabase. Key features include customizable portfolios, a "Lab" module for backtesting and strategy experimentation using historical data, automated order execution via scripts/bots, direct wallet or broker connections for live trading, and an intelligent news aggregator that surfaces relevant coverage based on each user’s portfolio composition. The system is flexible—users can tailor indicators, alerts, and views to their investment needs.
+  </p>
+</section>
 
-  <script>
-    const langData = {
-      id: {
-        summaryTitle: "Ringkasan Diri",
-        summaryText: "Individu proaktif dan autodidak dengan pengalaman investasi kripto dan saham sejak 2020. Terbiasa membaca tren pasar, mengelola risiko, dan memanfaatkan peluang. Saat ini mendalami pemrograman (HTML, CSS, JavaScript) untuk membangun aplikasi analisis data, automasi, dan visualisasi portofolio—menggabungkan analisis finansial dengan teknologi.",
-        experienceTitle: "Pengalaman",
-        projectsTitle: "Proyek",
-        skillsTitle: "Keterampilan",
-        interestsTitle: "Minat & Hobi",
-        langLabel: "ID"
-      },
-      en: {
-        summaryTitle: "Summary",
-        summaryText: "A proactive and self-taught individual with investment experience in crypto and stocks since 2020. Skilled in reading market trends, managing risks, and seizing opportunities. Currently deepening skills in programming (HTML, CSS, JavaScript) to build data analysis, automation, and portfolio visualization tools—integrating finance with technology.",
-        experienceTitle: "Experience",
-        projectsTitle: "Projects",
-        skillsTitle: "Skills",
-        interestsTitle: "Interests",
-        langLabel: "EN"
-      }
-    };
-    let currentLang = "id";
-    function toggleLanguage() {
-      currentLang = currentLang === "id" ? "en" : "id";
-      const data = langData[currentLang];
-      document.getElementById("summaryTitle").textContent = data.summaryTitle;
-      document.getElementById("summaryText").textContent = data.summaryText;
-      document.getElementById("experienceTitle").textContent = data.experienceTitle;
-      document.getElementById("projectsTitle").textContent = data.projectsTitle;
-      document.getElementById("skillsTitle").textContent = data.skillsTitle;
-      document.getElementById("interestsTitle").textContent = data.interestsTitle;
-      document.getElementById("langLabel").textContent = data.langLabel;
+<!-- Keterampilan (dipisah ID/EN) -->
+<section>
+  <h2 data-lang="id">Keterampilan</h2>
+  <h2 data-lang="en" style="display:none">Skills</h2>
+
+  <ul data-lang="id">
+    <li>Analisis Pasar Kripto & Saham</li>
+    <li>Manajemen Portofolio</li>
+    <li>Komunikasi Komunitas</li>
+    <li>HTML, CSS, JavaScript</li>
+    <li>Git & GitHub, Vercel, Supabase</li>
+    <li>Automasi & Robot Trading</li>
+    <li>Integrasi Wallet / Web3</li>
+    <li>Manajemen Waktu & Kerja Tim</li>
+    <li>Berpikir Analitis</li>
+    <li><strong>Bahasa Inggris — Intermediate</strong></li>
+  </ul>
+
+  <ul data-lang="en" style="display:none">
+    <li>Crypto & Stock Market Analysis</li>
+    <li>Portfolio Management</li>
+    <li>Community Engagement</li>
+    <li>HTML, CSS, JavaScript</li>
+    <li>Git & GitHub, Vercel, Supabase</li>
+    <li>Automation & Trading Bots</li>
+    <li>Wallet Integration / Web3</li>
+    <li>Time Management & Teamwork</li>
+    <li>Analytical Thinking</li>
+    <li><strong>English — Intermediate</strong></li>
+  </ul>
+</section>
+
+<!-- Minat -->
+<section>
+  <h2 data-lang="id">Minat & Hobi</h2>
+  <h2 data-lang="en" style="display:none">Interests</h2>
+  <p data-lang="id">Mendaki gunung, membaca filsafat, menelaah ekonomi makro dan politik, serta mengembangkan sistem analisis investasi.</p>
+  <p data-lang="en" style="display:none">Hiking, reading philosophy, studying macroeconomics and politics, and developing investment analysis systems.</p>
+</section>
+
+  </main>  <script>
+    // language toggle: show/hide elements with data-lang attribute
+    const langToggle = document.getElementById('langToggle');
+    function setLanguage(lang){
+      document.querySelectorAll('[data-lang]').forEach(el=>{
+        if(el.getAttribute('data-lang')===lang) el.style.display=''; else el.style.display='none';
+      });
+      localStorage.setItem('cv-lang', lang);
     }
-    function setTheme(theme) {
-      const colors = {
-        blue: "#1e88e5", green: "#2e7d32", purple: "#6a1b9a",
-        amber: "#ff8f00", slate: "#37474f"
-      };
-      document.documentElement.style.setProperty("--primary", colors[theme]);
-      localStorage.setItem("theme", theme);
-    }
-    const savedTheme = localStorage.getItem("theme") || "blue";
-    setTheme(savedTheme);
-    document.getElementById("themeSelect").value = savedTheme;
-  </script>
-</body>
+    // initial language from storage
+    const savedLang = localStorage.getItem('cv-lang') || 'id';
+    setLanguage(savedLang);
+    langToggle.addEventListener('click', ()=>{ const next = (localStorage.getItem('cv-lang')||'id')==='id' ? 'en' : 'id'; setLanguage(next); });
+
+    // color picker
+    const colorPicker = document.getElementById('colorPicker');
+    colorPicker.addEventListener('input', e=>{ document.documentElement.style.setProperty('--accent', e.target.value); localStorage.setItem('cv-accent', e.target.value); });
+    // load saved accent
+    const savedAccent = localStorage.getItem('cv-accent'); if(savedAccent) { colorPicker.value = savedAccent; document.documentElement.style.setProperty('--accent', savedAccent); }
+  </script></body>
 </html>
